fix_UI_issues
* Removed arrows pointing left to right on mobile phone.
* Fixed issue of 'inbox to respond to messages on desktop is not aligned well'.

--- a/app/assets/stylesheets/common/_responsive.css.scss
+++ b/app/assets/stylesheets/common/_responsive.css.scss
@@ -792,4 +792,7 @@
   .related_searches{
     padding: 0 0 0 16px;
   }
+  .bx-wrapper .bx-controls-direction a {
+    display: none;
+  }
 }
